tests/golden/expected/function_dup.stdout.txt
Compile error: tests/fixtures/function_dup.lamp:15: duplicate definition of function "score"
  15 | function int score():
    | ^
